--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,10 +37,10 @@ jobs:
             ${{ runner.os }}-
       - uses: julia-actions/julia-buildpkg@latest
       - uses: julia-actions/julia-runtest@latest
-      - uses: julia-actions/julia-processcoverage@v1
-      - uses: codecov/codecov-action@v3
-        with:
-          file: lcov.info
+      # - uses: julia-actions/julia-processcoverage@v1
+      # - uses: codecov/codecov-action@v3
+        # with:
+          # file: lcov.info
   docs:
     name: Documentation
     runs-on: ubuntu-latest
