--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "JSMDInterfaces"
 uuid = "6b30ee2f-618e-4a15-bf4e-7df7b496e609"
-authors = ["Andrea Pasquale <andrea.pasquale@polimi.it> and Michele Ceresoli <michele.ceresoli@polimi.it>"]
-version = "1.1.1"
+authors = ["JSMD Team"]
+version = "1.2.0"
 
 [compat]
 julia = "1"
