--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,9 +12,11 @@ jobs:
       fail-fast: false
       matrix:
         version:
+          - '1.6'
+          - '1.7'
           - '1.8'
           - '1.9'
-          - nightly
+          - 'nightly'
         os:
           - ubuntu-latest
         arch:
